<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.adamn.userstatisticsapplication.Activities.RegisterActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/Register_Linear_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/RegisterText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/RegisterActivityWelcome"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/RegisterEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/RegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/RegisterEmail"
                android:inputType="textEmailAddress"/>



        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Register_Password_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/RegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/RegisterPassword"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/RegisterCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkLime"
            android:layout_marginTop="20dp"
            android:text="@string/RegisterAccountButton" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/RegisterBackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkLime"
            android:layout_marginTop="20dp"
            android:text="@string/RegisterBackButton" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
