<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen"
    tools:context="com.example.adamn.userstatisticsapplication.Activities.NutritionixActivity">

    <LinearLayout
        android:id="@+id/nutritionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/nutritionWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/NutritionWelcome"
            android:textSize="24sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <EditText
            android:id="@+id/nutritionEnterFood"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/EnterFood"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <Button
            android:id="@+id/nutritionSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Submit" />

        <ListView
            android:id="@+id/nutritionListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
