<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightGreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adamn.userstatisticsapplication.Activities.HomepageActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/HomepageTextViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/HomepageWelcome"
            android:layout_width="368dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/HomepageWelcome"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.design.widget.TextInputLayout>

    <ScrollView
        android:id="@+id/HomepageScrollView"
        android:layout_width="369dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomepageTextViewLayout"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/HomepageLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/SteamAPIButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorAccent"
                android:text="@string/SteamAPIButton"
                android:layout_margin="5dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/WeatherAPIButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorAccent"
                android:text="@string/WeatherAPIButton"
                android:layout_margin="5dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/NutritionAPIButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorAccent"
                android:text="@string/nutritionAPIButton"
                android:layout_margin="5dp"
                android:textSize="14sp" />


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
